{
    "version": 1,
    "name": "MapInputActions",
    "maps": [
        {
            "name": "MapActions",
            "id": "c8e6a87d-34d9-4bdd-b6a5-e0d0c22cbb0d",
            "actions": [
                {
                    "name": "MapZoom",
                    "type": "PassThrough",
                    "id": "1cda8bb8-828d-44c1-8eb6-01bc05de0424",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MapButtonPress",
                    "type": "Button",
                    "id": "e7f12cef-8237-41e1-8cad-c99736245475",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cc05a969-8a35-4f4e-b2f2-845ea5c3e8d0",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "266f0cfe-2353-4c1d-9dab-774975b931e3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapButtonPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}